[tool.poetry]
name = "aclue-dart-pi"
version = "0.1.0"
description = ""
authors = ["jonha892"]

[tool.poetry.dependencies]
python = "^3.8"
picamera = "^1.13"
fastapi = "^0.70.1"
uvicorn = {extras = ["standard"], version = "^0.16.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
