[tool.poetry]
name = "aclue-dart-pi"
version = "0.1.0"
description = ""
authors = ["jonha892"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.70.1"
uvicorn = {extras = ["standard"], version = "^0.16.0"}
pydantic = "^1.9.0"
SQLAlchemy = "^1.4.36"
sqlmodel = "^0.0.6"
opencv-python = "^4.7.0.68"
pillow = "^9.4.0"
imageio = "^2.25.1"
pypng = "^0.20220715.0"

[tool.poetry.extras]
runtime = ["picamera=^1.13"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
